lib/tests/ui/trait_with_const.stderr
error: trait must only define methods
 --> $DIR/trait_with_const.rs:3:5
  |
3 |     const FOO: i32;
  |     ^^^^^
